Added resume page

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700|Open+Sans+Condensed:300,700|Quicksand:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Arapey|Montserrat:300,400,500|Playfair+Display|Prata|Raleway|Roboto|Vidaloka');
 
 @font-face {
 	font-family:'Audrey-Normal';
