--- a/stylesheets/resume.scss
+++ b/stylesheets/resume.scss
@@ -376,6 +376,19 @@ body{
     }
 	}
 }
+
+.sticky {
+	background-color: #000;
+	color: #fff;
+	z-index: 10;
+	a{
+		color: #fff;
+		i{
+			color: #fff;
+		}
+	}
+}
+
 footer{
 	 border: 3px solid $mainColor;
 	bottom: 0;
