--- a/stylesheets/resume.scss
+++ b/stylesheets/resume.scss
@@ -28,6 +28,7 @@ $rale: "Raleway";
 $blue: #95C6C4;
 $mainColor: #070707;
 $gray: #8c8c8c;
+$pink: #f91791;
 
 html{
 	 // border: 10px solid $mainColor;
@@ -44,6 +45,8 @@ html{
 	border-radius: 100%;
 	border-width: 0 0 1px;
 	z-index:100;
+	right: 30px;
+	top: 30px;
 
 }
 
@@ -51,10 +54,10 @@ html{
 	// width: 50px;
 	// height: 50px;
 	position: fixed;
-	background: #f91791;
+	background: $pink;
 	transition: .25s;
-	right: 45px;
-	top: 30px;
+	// right: 45px;
+	// top: 30px;
 	transform: translate3d(50%, -50%, 0);
 	transform-origin: center center;
 	box-shadow: 0 2px 3px rgba(0,0,0,1);
@@ -62,32 +65,125 @@ html{
 	-o-transition: all 0.25s ease-in-out;
 	-webkit-transition: all 0.25s ease-in-out;
 	transition: all 0.25s ease-in-out;
-	color: $blue;
 	cursor: pointer;
+		span{
 	a {
 			text-decoration: none;
-		i {
-			text-align: center;
-			font-size: 24px;
-			-moz-border-radius: 100px;
-			-webkit-border-radius: 100px;
-			border-radius: 100px;
-			display: block;
-			line-height: 50px;
-			// margin: 0 5px;
-			-moz-transition: all 0.25s ease-in-out;
-			-o-transition: all 0.25s ease-in-out;
-			-webkit-transition: all 0.25s ease-in-out;
-			transition: all 0.25s ease-in-out;
-			color: #fff;
-			&:hover {
-				background-color: $blue;
 				color: #fff;
+				i {
+					text-align: center;
+					font-size: 24px;
+					-moz-border-radius: 100px;
+					-webkit-border-radius: 100px;
+					border-radius: 100px;
+					display: block;
+					line-height: 50px;
+					// margin: 0 5px;
+					-moz-transition: all 0.25s ease-in-out;
+					-o-transition: all 0.25s ease-in-out;
+					-webkit-transition: all 0.25s ease-in-out;
+					transition: all 0.25s ease-in-out;
+					color: #fff;
+					&:hover {
+						background-color: #fff;
+						color: $pink;
+					}
+				}
 			}
-		}
+			&:hover {
+
+				color: $pink;
+			}
+	}
+	&:hover {
+		background-color: #fff;
+		color: $pink;
 	}
 }
 
+
+[tooltip] {
+  position: relative;
+}
+
+[tooltip]::before,
+[tooltip]::after {
+
+  text-transform: none;
+  font-size: 16px;
+  line-height: 20px;
+  user-select: none;
+  pointer-events: none;
+  position: absolute;
+  display: none;
+  opacity: 0;
+}
+[tooltip]::before {
+
+  content: '';
+  border: 5px solid transparent;
+  z-index: 1001;
+}
+[tooltip]::after {
+  content: attr(tooltip);
+  font-family: $rale, sans-serif;
+  text-align: center;
+  min-width: 25px;
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 1ch 1.5ch;
+  border-radius: 5px;
+  box-shadow: 0 1em 2em -.5em rgba(0, 0, 0, 0.35);
+  background: $pink;
+  color: #fff;
+  z-index: 1000;
+
+}
+
+[tooltip]:hover::before,
+[tooltip]:hover::after {
+  display: block;
+}
+
+[tooltip='']::before,
+[tooltip='']::after {
+  display: none !important;
+}
+
+
+[tooltip][flow^="left"]::before {
+  top: 50%;
+  border-right-width: 0;
+  border-left-color: $pink;
+  left: calc(0em - 10px);
+  transform: translate(-.5em, -50%);
+}
+[tooltip][flow^="left"]::after {
+  top: 50%;
+  right: calc(100% + 10px);
+  transform: translate(-.5em, -50%);
+}
+
+@keyframes tooltips-vert {
+  to {
+    opacity: .9;
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes tooltips-horz {
+  to {
+    opacity: .9;
+    transform: translate(0, -50%);
+  }
+}
+
+[tooltip][flow^="left"]:hover::before,
+[tooltip][flow^="left"]:hover::after{
+  animation: tooltips-horz 300ms ease-out forwards;
+}
 
 
 
